--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 index # 1// update.tested//preview??Hello there, awesome person!
 <html>
+  <head>
+    <title>Stef's First Web Page</title>
+</head>
   <body>
         Stefs2dop3d0ut4u
     </body>
