--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@ index # 1// update.tested//preview??Hello there, awesome person!
     <title>Stef's First Web Page</title>
 </head>
   <body>
-        Stefs2dop3d0ut4u
+    Stefs2dop3d0ut4u
+    <h1>
+        Heading
+    </h1>
     </body>
 </html>
