--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ index # 1// update.tested//preview??Hello there, awesome person!
     <title>Stef's First Web Page</title>
 </head>
   <body>
-    Stefs2dop3d0ut4u
+<img src="https://avatars0.githubusercontent.com/u/62625456?v=4">
+
     <h1>
         Heading
     </h1>
