--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@ index # 1// update.tested//preview??Hello there, awesome person!
 <img src="https://avatars0.githubusercontent.com/u/62625456?v=4">
 
     <h1>
-        Heading
+        2dop3 Stef
     </h1>
     </body>
+  <ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+</ul>
 </html>
