--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ index # 1// update.tested//preview??Hello there, awesome person!
     <h1>
         2dop3 Stef
     </h1>
-    </body>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
   <ul>
     <li>This</li>
     <li>Is an</li>
