--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@ index # 1// update.tested//preview??Hello there, awesome person!
 <html>
   <head>
     <title>Stef's First Web Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
   <body>
 <img src="https://avatars0.githubusercontent.com/u/62625456?v=4">
